--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Playlist</title>
 </head>
 <body>
     <h1>Hello EJS</h1>
 
     <a href="/admin">Administração</a>
+
+    <% playlist.forEach ((music) => { %>
+    <section>
+        <h2><%= music.name %></h2>
+         <p><%= music.name %></p>
+        <img src="<%= music.linkImage %>" alt="link da imagem">
+        <audio controls src="<%= music.linkMusic %>"></audio>
+    </section>
+        <% }) %>
+
+
 </body>
 </html>
