--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,21 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <title>Playlist</title>
 </head>
 <body>
-    <h1>Hello EJS</h1>
 
-    <a href="/admin">Administração</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="/admin"><i class="bi bi-gear"></i></a>
+            </li>
+        </ul>
+    </nav>
 
-    <% playlist.forEach ((music) => { %>
-    <section>
-        <h2><%= music.name %></h2>
-         <p><%= music.name %></p>
-        <img src="<%= music.linkImage %>" alt="link da imagem">
-        <audio controls src="<%= music.linkMusic %>"></audio>
-    </section>
-        <% }) %>
+    <section id="player">
+        <h1>Playlist Blue</h1>
+        <div>
+            <img id="currentImage" src="/img/musicoff.jpg">
+            <h2 id="currentName">Titulo</h2>
+            <p id="currentArtist">Artista</p>
+        </div>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Nome</th>
+                        <th>Artista</th>
+                        <th></th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <% playlist.forEach((music)=> { %>
+                        <tr class="musics">
+                            <td><img src="<%= music.linkImage %>" alt="Imagem da musica"></td>
+                            <td>
+                                <%= music.name %>
+                            </td>
+                            <td>
+                                <%= music.author %>
+                            </td>
+                            <td>
+                                <audio controls class="audio " src="<%= music.linkMusic %>"></audio>
+                            </td>
+                        </tr>
+                        <% }) %>
+                </tbody>
+
+            </table>
+        </div>
 
 
 </body>
